--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <a herf="http://yuzupon1133.github.io">Yuzupon1133's page</a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="https://scratch.mit.edu/users/yuzupon1133">Yuzupon1133のプロフィール</a>
       </div>
     </div>
   </header>
