--- a/pointsites.html
+++ b/pointsites.html
@@ -4,11 +4,11 @@
 <h2>おすすめポイントサイトランキング10選</h2><p>&nbsp;&nbsp;</p>
 <h3>ポイントサイトとは？</h3><p>ポイントサイトとは、広告をクリックしたり、アンケートに答えたり、ゲームをしたり、サイトに会員登録をすること等でポイントが貯まり、現金やギフト券に交換できるサイトです。&nbsp;ポイントサイトは、紹介している広告主からの報酬で運営され、それをポイントとして会員に還元しています。ですのでポイントサイトの登録・利用にはお金がかかりません。&nbsp;特に、買い物をするときにポイントサイトを経由することでショッピングサイトとポイントサイトのポイントが両方貯まるので大変お得です。&nbsp;</p><p>お小遣い稼ぎやポイント生活の定番といえばポイントサイトです。</p><p>ここで紹介しているポイントサイトは初心者でもリスクなく簡単に、大量に稼ぐことができます。</p>
 <p>&nbsp;</p><p>このサイトでは、ポイ活におススメのポイントサイトをランキング形式で紹介します！</p><p>これからポイ活を始めたい！いろんなポイントサイトを検討したい！などとという方は、ポイントサイト選びの参考にしてみてください。</p>
-<div class="saysprp"><div class="fuki"><p>各ポイントサイトごとに特徴があるから、複数のサイト利用すると効率よく稼げます。<span class="keiko_yellow"><strong>もちろん、ここで紹介しているサイトは全て無料で登録できます。</strong></span></p></div></div>
+<div class="saysprp"><div class="fuki"><p>&nbsp;&nbsp;各ポイントサイトごとに特徴があるから、複数のサイト利用すると効率よく稼げます。<span class="keiko_yellow"><strong>もちろん、ここで紹介しているサイトは全て無料で登録できます。</strong></span></p></div></div>
 
 
 <h3>おすすめ１位　【モッピー】</h3><p style="text-align: center;">
-	<a href="https://pc.moppy.jp/entry/invite.php?invite=Pw2be157&type=service" target="_blank" rel="noopener noreferrer"><img src="https://img.moppy.jp/pub/pc/friend/640x480-1.jpg" width="100%" alt="モッピー！お金がたまるポイントサイト"></a>
+	<a href="https://pc.moppy.jp/entry/invite.php?invite=Pw2be157&type=service" target="_blank" rel="noopener noreferrer"><img src="https://img.moppy.jp/pub/pc/friend/640x480-1.jpg" width="60%" alt="モッピー！お金がたまるポイントサイト"></a>
 			<table style="width: 100%; border-collapse: collapse;" border="1"><tbody><tr style="height: 39px;"><td style="width: 43.7032%; height: 39px; background-color: #fafffa;">ポイントレート</td><td style="width: 56.2268%; height: 39px;">1pt＝1円</td></tr><tr style="height: 39px;"><td style="width: 43.7032%; height: 39px; background-color: #fafffa;">最低交換額</td><td style="width: 56.2268%; height: 39px;">300pt（300円）～</td></tr><tr style="height: 39px;"><td style="width: 43.7032%; height: 39px; background-color: #fafffa;">交換手数料</td><td style="width: 56.2268%; height: 39px;">無料～</td></tr><tr><td style="width: 43.7032%; background-color: #fafffa;">無料コンテンツ</td><td style="width: 56.2268%;">とても多い</td></tr><tr style="height: 39px;"><td style="width: 43.7032%; height: 39px; background-color: #fafffa;">スマホアプリ</td><td style="width: 56.2268%; height: 39px;">なし</td></tr></tbody></table>
 				<div class="memo "><div class="memo_ttl dfont"> キャンペーン情報</div><p>【9/30まで】新規登録後、10/30までに5,000P以上獲得で1,000Pプレゼント！</p></div><div class="sng-box box29">
 				<div class="box-title">おすすめPOINT</div><div class="box-content"><ul><li>最低交換額も300ptと低く初心者でも交換額まで稼げる。</li><li>無料コンテンツやサービス案件など、高い還元率で稼ぎやすい。</li><li>スマホとPCの両方で稼げるのでどんどんポイントが貯まる。</li><li>ショッピングや高額案件にも強く、たくさん稼ぐことができる。</li><li><strong><span class="red">運営実績が10年以上</span></strong>あり、安心・安全に利用できる。</li></ul></div></div><p>&nbsp;</p>
