--- a/pointsites.html
+++ b/pointsites.html
@@ -1,5 +1,21 @@
-<html><head><title>ポイントサイトをランキング形式でご紹介!あなたにあったポイントサイトが見つかるかも・・・!</title></head>
+<html><head><title>ポイントサイトをランキング形式でご紹介!あなたにあったポイントサイトが見つかるかも・・・!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css"></head>
 <body bgcolor="#ffffe0"><section class="entry-content page-content cf">
+  <header>
+    <div class="container">
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-left">
+        <a herf="https://yuzupon1133.github.io">Yuzupon1133's page</a>
+      </div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-right">
+        <a href="pointsites.html">ポイントサイトのご紹介!</a>
+      </div>
+    </div>
+  </header>
 
 <h2>おすすめポイントサイトランキング10選</h2><p>&nbsp;&nbsp;</p>
 <h3>ポイントサイトとは？</h3><p>ポイントサイトとは、広告をクリックしたり、アンケートに答えたり、ゲームをしたり、サイトに会員登録をすること等でポイントが貯まり、現金やギフト券に交換できるサイトです。&nbsp;ポイントサイトは、紹介している広告主からの報酬で運営され、それをポイントとして会員に還元しています。ですのでポイントサイトの登録・利用にはお金がかかりません。&nbsp;特に、買い物をするときにポイントサイトを経由することでショッピングサイトとポイントサイトのポイントが両方貯まるので大変お得です。&nbsp;</p><p>お小遣い稼ぎやポイント生活の定番といえばポイントサイトです。</p><p>ここで紹介しているポイントサイトは初心者でもリスクなく簡単に、大量に稼ぐことができます。</p>
