--- a/asc/index.html
+++ b/asc/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         
-        <img src="img/screenshot_1.png"><img src="img/screenshot_2.png"><img src="img/screenshot_3.png"><img src="img/screenshot_4.png">
+        <img src="img/screenshot_1.png" border="1"><br>
+        <img src="img/screenshot_2.png" border="1"><br>
+        <img src="img/screenshot_3.png" border="1"><br>
+        <img src="img/screenshot_4.png" border="1"><br>
 
     </body>
 </html>
