--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>お探しのページは見つかりませんでした。</title>
+    <link rel="stylesheet" href="404.css">
   </head>
   <body>
     <div class="center">
