--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>お探しのページは見つかりませんでした。</title>
     <link rel="stylesheet" href="404.css">
   </head>
